# cind-sandbox

./: README.md  pyproject.toml
.github/workflows/: ci.yml  cind-github.yml  cind-worker.yml
src/mathutils/: __init__.py  core.py
tests/: test_core.py
